@@ -767,14 +767,15 @@ class WC_Gateway_Stripe extends WC_Stripe_Payment_Gateway {
 	}
 
 	/**
-	 * Generates a localized message for an error, adds it as a note and throws it.
+	 * Generates a localized message for an error from a response.
 	 *
-	 * @since 4.2.0
-	 * @param  stdClass $response  The response from the Stripe API.
-	 * @param  WC_Order $order     The order to add a note to.
-	 * @throws WC_Stripe_Exception An exception with the right message.
+	 * @since 4.3.2
+	 *
+	 * @param stdClass $response The response from the Stripe API.
+	 *
+	 * @return string The localized error message.
 	 */
-	public function throw_localized_message( $response, $order ) {
+	public function get_localized_error_message_from_response( $response ) {
 		$localized_messages = WC_Stripe_Helper::get_localized_messages();
 
 		if ( 'card_error' === $response->error->type ) {
@@ -782,6 +783,20 @@ class WC_Gateway_Stripe extends WC_Stripe_Payment_Gateway {
 		} else {
 			$localized_message = isset( $localized_messages[ $response->error->type ] ) ? $localized_messages[ $response->error->type ] : $response->error->message;
 		}
+
+		return $localized_message;
+	}
+
+	/**
+	 * Gets a localized message for an error from a response, adds it as a note to the order, and throws it.
+	 *
+	 * @since 4.2.0
+	 * @param  stdClass $response  The response from the Stripe API.
+	 * @param  WC_Order $order     The order to add a note to.
+	 * @throws WC_Stripe_Exception An exception with the right message.
+	 */
+	public function throw_localized_message( $response, $order ) {
+		$localized_message = $this->get_localized_error_message_from_response( $response );
 
 		$order->add_order_note( $localized_message );
 
