@@ -115,6 +115,7 @@ If you get stuck, you can ask for help in the Plugin Forum.
 
 = 4.3.2 2019-x-x =
 * Fix - Add compatibility to payment request buttons with some of the WooCommerce Product Add-ons on the product page
+* Fix - Display a localized error message when a customer tries to save a card during checkout, but there's an error
 
 = 4.3.1 2019-11-12 =
 * Fix - Overwrite the previous Apple Pay verification file if it has changed.
